# agent-security-hooks

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
config/: blacklist.yaml
hooks/claude/: settings.json
hooks/cursor/: hooks.json
hooks/gemini/: settings.json
src/agent_security_hooks/: __init__.py  cli.py  logger.py  validator.py
src/agent_security_hooks/adapters/: __init__.py  claude.py  cursor.py  gemini.py
tests/: __init__.py  test_adapters.py  test_validator.py
