[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-security-hooks"
version = "1.0.0"
description = "Security monitoring hooks for AI agents (Claude Code, Cursor, Gemini CLI)"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
    { name = "Suchith" }
]

dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
agent-security-hooks = "agent_security_hooks.cli:main"

[project.urls]
Homepage = "https://github.com/suchith-narayan/agent-security-hooks"
Documentation = "https://github.com/suchith-narayan/agent-security-hooks#readme"
Repository = "https://github.com/suchith-narayan/agent-security-hooks"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_security_hooks"]

[tool.hatch.build.targets.wheel.shared-data]
"config/blacklist.yaml" = "share/agent-security-hooks/blacklist.yaml"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

